# opr-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  docker.yml
docs/: SPEC.md
scripts/corpus_validation/: README.md  SPOT_CHECK_REPORT.md  VALIDATION_5PDFS.md  VALIDATION_CORPUS.md  bucket.py  corpus_validator.py  prep_briefs.py  validate_5_pdfs.py
skills/: README.md
skills/army-forge-pdfs/: AGENTS.md
skills/army-forge-pdfs/scripts/: fetch_army_book_pdfs.py
src/opr_mcp/: cleanup.py  cleanup_scheduler.py  cli.py  config.py  db.py  embeddings.py  indexing_status.py  instructions.md  server.py  versioning.py  watch.py
src/opr_mcp/auth/: __init__.py  discord.py  discord_provider.py  storage.py
src/opr_mcp/forge/: __init__.py  api.py  config.py  scheduler.py  sync.py
src/opr_mcp/ingest/: chunk.py  forge_book.py  parse_units.py  parse_upgrades.py  pdf.py  pipeline.py  segment.py
src/opr_mcp/search/: fts.py  hybrid.py  query.py  vector.py
src/opr_mcp/server/: __init__.py  auth_callback.py  build.py  context.py  finalize.py  force_org.py  instructions.py  tools.py
src/opr_mcp/tools/: __init__.py  get_special_rule.py  lists.py  lookup_unit.py  lookup_upgrades.py  search_rules.py  validate_army_list.py
tests/: conftest.py  local_corpus.py  test_auth_config.py  test_auth_storage.py  test_chunk.py  test_cleanup.py  test_cli_forge.py  test_db.py  test_discord_provider.py  test_forge_api.py  test_forge_book.py  test_forge_config.py  test_forge_sync.py  test_hybrid.py  test_indexing_status.py  test_instructions_injection.py  test_integration.py  test_lists.py  test_local_corpus.py  test_lookup_unit.py  test_lookup_upgrades.py  test_parse_units.py  test_parse_upgrades.py  test_parse_upgrades_free.py  test_pdf_metadata.py  test_query.py  test_read_me_first.py  test_segment.py  test_validate_army_list.py  test_version_filter.py
tests/_local_corpus_cache/: .gitignore  bucket.py  corpus_validator.py  prep_briefs.py  validate_5_pdfs.py
