[project]
name = "opr-mcp"
version = "0.1.0"
description = "Local MCP server that indexes One Page Rules PDFs and exposes hybrid (BM25 + vector) lookup tools."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Chris Peterson" }]
dependencies = [
    "mcp>=1.27.0",
    "typer>=0.12.0",
    "pymupdf>=1.24.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "transformers>=4.41.0,<5.0.0",
    "torch>=2.2.0",
    "sqlite-vec>=0.1.6",
    "platformdirs>=4.0.0",
    "numpy>=1.26.0",
    "watchdog>=4.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
opr-mcp = "opr_mcp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Route torch through PyTorch's CPU-only wheel index. The default PyPI wheel
# bundles CUDA (cuDNN, NCCL, cuBLAS, ...) and adds ~2-3 GB of NVIDIA payload
# we never use — embedding 384-dim BGE-small on CPU is plenty fast for this corpus.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.hatch.build.targets.wheel]
packages = ["src/opr_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Default run skips ``local_corpus`` because those tests depend on the
# user's licensed PDF library under ``opr-data/`` (gitignored, never
# uploaded). Run them locally with ``pytest -m local_corpus`` after
# dropping PDFs in opr-data/. CI never sets this corpus up, so the
# default ``-m "not local_corpus"`` keeps GitHub Actions runs clean.
addopts = "-q -m 'not local_corpus'"
asyncio_mode = "auto"
markers = [
    "local_corpus: validates parser end-to-end against ./opr-data/. Skipped by default; run with `pytest -m local_corpus`. Never enable in CI — copyrighted PDFs must not reach the remote.",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
# E501: long lines are OK (line-length is just a hint).
# B008: typer expresses CLI options as call-expression defaults; this is the documented idiom.
ignore = ["E501", "B008"]
